--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -1,8 +1,28 @@
 @use 'base/variables' as v;
+@use 'base/mixins' as m;
 
 .header{
     padding: 5rem 0;
     position: relative;
+    
+
+    @include m.telefono{
+        h1{
+            color: red;
+        }
+    }
+    
+    @include m.tablet{
+       h1{
+           color: palevioletred;
+       }
+    }
+    @include m.desktop{
+        h1{
+            color: rgb(63, 35, 141);
+        }
+    }
+
    &::before{
         content: '';
         background-color: v.$negro;
@@ -20,10 +40,6 @@
 
     a{
         color: mintcream;
-    }
-
-    h1{
-        color: moccasin;
     }
 }
 
