--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -5,24 +5,24 @@
     padding: 5rem 0;
     position: relative;
     
+@include m.telefono { 
+    h1{
+        color: red;
+    }
+ }
 
-    @include m.telefono{
-        h1{
-            color: red;
-        }
-    }
-    
-    @include m.tablet{
-       h1{
-           color: palevioletred;
-       }
-    }
-    @include m.desktop{
-        h1{
-            color: rgb(63, 35, 141);
-        }
-    }
+ @include m.tablet { 
+     h1{
+         color: blue;
+     }
+  }
 
+  @include m.desktop { 
+      h1{
+          color: yellowgreen;
+      }
+      
+   }
    &::before{
         content: '';
         background-color: v.$negro;
