--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -5,32 +5,10 @@
     padding: 5rem 0;
     position: relative;
 
-  
-    h1{
-        color: yellow;
-        font-size: 2rem;
-    }
-    
-@include m.telefono { 
-    h1{
-        color: red;
-    }
- }
-
  @include m.tablet { 
-     h1{
-         color: blue;
-         font-size: 3rem;
-         background-color: white;
-     }
+    min-height: 70rem;
   }
 
-  @include m.desktop { 
-      h1{
-          color: yellowgreen;
-      }
-      
-   }
    &::before{
         content: '';
         background-color: v.$negro;
@@ -44,6 +22,16 @@
 
     .contenido-header{
         position: relative;
+        h1{
+            text-align: center;
+            color: v.$blanco;
+            font-weight: normal;
+            margin-top:5rem;
+            @include m.tablet { 
+               margin-top:10rem;
+             }
+        
+        }
     }
 }
 
