modificación responsive line-height h1

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 //FUENTES
-$fuente_principal:  'Roboto', sans-serif;
+$fuentePrincipal:  'Roboto', sans-serif;
 
 //MEDIA QUERIES
 $telefono: 480px;
@@ -13,6 +13,7 @@ $negro: #000000;
 $blanco: #FFFFFF;
 $grisClaro: #ECEEEF;
 $cafeClaro: #ebe7de;
+$fondo: rgb(210, 247, 244);
 
 //UNIDADES
 $separacion: 5rem;
