--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -1,5 +1,7 @@
 @forward 'normalize';
 @forward 'variables';
+@forward 'mixins';
 @forward  'globales';
 @forward 'utilidades';
 @forward 'header';
+@forward 'tipografia';
