--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -27,10 +27,15 @@
             color: v.$blanco;
             font-weight: normal;
             margin-top:5rem;
+            font-size: 2.5rem;
+            padding: 2rem;
+            line-height: 2.8rem;
+
             @include m.tablet { 
                margin-top:10rem;
+               font-size: 4rem;
+               line-height: 4.8rem;
              }
-        
         }
     }
 }
