--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -35,6 +35,7 @@
                margin-top:10rem;
                font-size: 4rem;
                line-height: 4.8rem;
+               padding: 2rem 8rem;
              }
         }
     }
