--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -10,7 +10,7 @@ html{
 }
 
 body{
-   font-family: v.$fuentePrincipal;
+   font-family: v.$fuenteSecundaria;
    font-size: 1.6rem;
    background-color: v.$cafeClaro;
 }
@@ -36,3 +36,8 @@ img{
     display: block;
 }
 
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
