--- a/src/scss/inicio/_iconos.scss
+++ b/src/scss/inicio/_iconos.scss
@@ -1,16 +1,28 @@
 @use 'base/variables' as v;
+@use 'base/mixins' as m;
 
 .iconos{
 
     margin-top: 5rem;
     .listado-iconos{
 
+        @include m.tablet{ 
+           @include m.grid(3, 5rem);
+         }
+
         li{
 
             img{
                 margin: 0 auto;
+                width: 15rem;
+            }
+
+            @include m.tablet { 
+                img{
+                margin: 0 auto;
                 width: 12rem;
             }
+             }
             p{
                 font-family: v.$fuenteCursiva;
                 font-size: 3.2rem;
