--- a/src/scss/inicio/_menu.scss
+++ b/src/scss/inicio/_menu.scss
@@ -2,5 +2,10 @@
 @use 'base/mixins' as m;
 
 .nuestro-menu{
-    background-color: v.$primario;
+    background-image: url(../img/menu_arriba.svg), url(../img/menu_abajo.svg), linear-gradient(to top, v.$primario, v.$primario);
+    padding: 15rem 5rem 20rem 5rem;
+
+    @include m.tablet { 
+        padding: 15rem 0 20rem 0;
+     }
 }
