--- a/src/scss/inicio/_menu.scss
+++ b/src/scss/inicio/_menu.scss
@@ -4,8 +4,15 @@
 .nuestro-menu{
     background-image: url(../img/menu_arriba.svg), url(../img/menu_abajo.svg), linear-gradient(to top, v.$primario, v.$primario);
     padding: 15rem 5rem 20rem 5rem;
+    background-repeat: no-repeat;
+    background-position: center 5rem, center 92%, 100%;
+    background-size: 200%;
 
     @include m.tablet { 
         padding: 15rem 0 20rem 0;
+        background-size: 100%;
      }
+     @include m.desktop { 
+         background-size: 50%, 50%, 100%;
+      }
 }
