--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -7,3 +7,11 @@
 .bg-primario{
     background-color: v.$primario;
 }
+
+.margin-negativo-10{
+    margin-top: -10rem;
+}
+
+.bg-whithe{
+    background-color: v.$blanco;
+}
