--- a/src/scss/inicio/_testimonio.scss
+++ b/src/scss/inicio/_testimonio.scss
@@ -10,3 +10,18 @@
       padding: 10rem;
    }
 }
+
+.testimonial{
+   background-color: v.$cafeClaro;
+   padding: 2rem 4rem;
+   max-width: 50rem;
+   margin: 0 auto;
+   border-radius: 2rem;
+
+   .autor{
+      text-align: right;
+      font-size: 2.2rem;
+      color: v.$primario;
+      font-family: v.$fuenteCursiva;
+   }
+}
