--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -13,7 +13,7 @@ $desktop: 1024px;
 $primario: #5E311E;
 $secundario: #C39C63;
 $negro: #000000;
-$blanco: #FFFFFF;
+$blanco: #ffffff;
 $grisClaro: #ECEEEF;
 $cafeClaro: #ebe7de;
 $fondo: rgb(210, 247, 244);
