--- a/src/scss/footer/_footer.scss
+++ b/src/scss/footer/_footer.scss
@@ -1,3 +1,13 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
+.footer{
+    background-color: v.$primario;
+    .contenido-footer{
+        padding: 5rem;
+
+        @include m.tablet { 
+            @include m.grid (3, 2rem);
+         }
+    }
+}
