--- a/src/scss/footer/_footer.scss
+++ b/src/scss/footer/_footer.scss
@@ -10,4 +10,29 @@
             @include m.grid (3, 2rem);
          }
     }
+
+    .copyright{
+        text-align: center;
+        color: v.$blanco;
+        padding-bottom: 3rem;
+        font-size: 1rem;
+    }
+}
+
+.footer-box{
+    font-family: v.$fuenteCursiva;
+    text-align: center;
+    margin-bottom: v.$separacion;
+
+        h3{
+        margin: 0 0 1rem 0;
+        font-size: 2.4rem;
+        color: v.$secundario;
+        }
+
+        p, a{
+            line-height: 1rem;
+            font-size: 2rem;
+        }
+   
 }
