--- a/src/scss/internas/_nosotros.scss
+++ b/src/scss/internas/_nosotros.scss
@@ -1,2 +1,21 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
+
+.contenido-nosotros{
+    @include m.tablet { 
+    @include m.grid(2, 2rem);
+ }
+
+    .imagen{
+    
+        img{;
+           transform: rotate(-6deg);
+           border: 3rem solid v.$blanco;
+           box-shadow: 9px 10px 5px -7px rgb(0 0 0 / .35);
+        }
+    }
+
+    .texto{
+
+    }
+}
