--- a/src/scss/internas/_nosotros.scss
+++ b/src/scss/internas/_nosotros.scss
@@ -7,8 +7,13 @@
  }
 
     .imagen{
-    
-        img{;
+        margin-bottom: 5rem;
+
+         @include m.tablet { 
+            margin-right: 5rem;
+            margin: 0 2rem 0 0;
+        }
+        img{
            transform: rotate(-6deg);
            border: 3rem solid v.$blanco;
            box-shadow: 9px 10px 5px -7px rgb(0 0 0 / .35);
