--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -52,3 +52,7 @@
 .header-nosotros{
     background-image: url(../img/header_nosotros.jpg);
 }
+
+.header-proceso{
+     background-image: url(../img/header_proceso.jpg);
+}
