--- a/src/scss/internas/_proceso.scss
+++ b/src/scss/internas/_proceso.scss
@@ -1,12 +1,28 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
-.contenido-proceso{
+.proceso-cafe{
     
 .imagen{
 
     img{
         margin-bottom: 5rem;
+    }
+}
+.texto{
+    h3{
+       margin-bottom: 0;
+       text-align: left; 
+       color: v.$primario;
+
+        &::after{
+            content: " ";
+            display: block;
+            width: 50%;
+            height: 5px;
+            background-color: v.$secundario;
+        }
+       
     }
 }
 
