--- a/src/scss/internas/_proceso.scss
+++ b/src/scss/internas/_proceso.scss
@@ -2,14 +2,24 @@
 @use 'base/mixins' as m;
 
 .proceso-cafe{
-    
-.imagen{
+     @include m.tablet { 
+        display: flex;
+        gap: v.$separacion;
+     }
 
+     .imagen,
+     .texto{
+         flex: 1;
+     }
+
+.imagen{
+   
     img{
         margin-bottom: 5rem;
     }
 }
 .texto{
+    margin-top: 1rem;
     h3{
        margin-bottom: 0;
        text-align: left; 
