--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -56,3 +56,7 @@
 .header-proceso{
      background-image: url(../img/header_proceso.jpg);
 }
+
+.header-menu{
+     background-image: url(../img/header_menu.jpg);
+}
