--- a/src/scss/internas/_menu.scss
+++ b/src/scss/internas/_menu.scss
@@ -2,5 +2,29 @@
 @use 'base/mixins' as m;
 
 .contenido-menu{
-    
+
+    background-image: url(../img/cafe.jpg);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: 100%;
+    aspect-ratio: 3 / 5;
+
+
+     @include m.telefono{ 
+        aspect-ratio: 3 / 5;
+     }
+
+    @include m.tablet{ 
+        @include m.grid(2, v.$separacion);
+        aspect-ratio: 16 / 5;
+         background-size: 40%;
+           background-position: bottom right;
+     }
+     .texto{
+         p{
+             font-size: 1.7rem;
+         }
+        
+     }
+
 }
