Termina responsive section menu

--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -3,14 +3,14 @@
 h1, h2, h3{
     font-family: v.$fuentePrincipal;
     margin: 0 0 v.$separacion;
-    text-transform: uppercase;
+   // text-transform: uppercase;
     text-align: center;
     line-height: 3.6rem;
     
 }
 
 h1{
-   font-size: 4rem;
+   font-size: 5rem;
 }
 
 h2{
