scss responsive section galeria

--- a/src/scss/header/_navegacion.scss
+++ b/src/scss/header/_navegacion.scss
@@ -17,7 +17,7 @@
        text-align: center;
        color: v.$blanco;
        font-size: 1.6rem;
-       text-transform: uppercase;
+       //text-transform: uppercase;
        font-weight: 400;
        margin-bottom: 1rem;
        @include m.tablet { 
