--- a/src/scss/internas/_contacto.scss
+++ b/src/scss/internas/_contacto.scss
@@ -6,7 +6,8 @@
        @include m.grid(2, v.$separacion);
        background-image: url(../img/granos_cafe.jpg);
        background-repeat: no-repeat;
-       background-position: right center;  
+       background-position: right center; 
+       background-size: 40%; 
     }
 }
 
@@ -23,12 +24,26 @@
             font-size: 2rem;
         }
         
+        input:not([type="submit"]),
+        select{
+            width: 100%;
+            padding: 1rem;
+            border: .5rem solid v.$primario;
+           
+        }
+
         input[type= "submit"]{
             background-color: v.$primario;
             width: 100%;
             border: none;
             padding: 1rem;
             color: v.$blanco;
+            text-transform: uppercase;
+
+            &:hover{
+                cursor: pointer;
+                background-color: v.$negro;
+            }
         }
     }
 }
